# advent-of-code

2019/01/: code1.d  code2.d
2019/02/: code1.d  code2.d  input01.txt
2019/03/: code1.d  code2.d  input02.txt
2019/04/: code1.d  code2.d
2019/05/: code1.d
2019/06/: code1.d  code2.d
2019/07/: code1.d  code2.d
2019/08/: code1.d  code2.d
2019/09/: code1.d
2019/10/: code1.d  code2.d  input02.txt
2019/11/: code1.d  code2.d
2019/12/: code1.d  code2.d
2019/13/: code1.d  code2.d  machine.d
2019/14/: code1.d  code2.d
2019/15/: code1.d
2019/16/: code1.d  code2.d
2019/17/: code1.d  code2.d  machine.d
2020/01/: day01.lisp
2020/02/: day02.lisp
2020/03/: day03.lisp
2020/04/: day04.lisp
2020/05/: day05.lisp
2020/06/: day06.lisp
2020/07/: day07.lisp
2020/08/: day08.lisp
2020/09/: day09.lisp
2020/10/: day10.lisp
2020/11/: day11.lisp
2021/: .gitignore  README.md
2021/c++/: CMakeLists.txt  newday.sh  workwork.sh
2021/c++/apps/: CMakeLists.txt  main.cpp
2021/c++/ext/range-v3/: CMakeLists.txt
2021/c++/include/: CLI11.hpp  boiler.hpp  concepts.hpp  day.hpp  day0.hpp  day1.hpp  day10.hpp  day11.hpp  day2.hpp  day3.hpp  day4.hpp  day5.hpp  day6.hpp  day7.hpp  day8.hpp  day9.hpp  utils.hpp
2021/c++/src/: CMakeLists.txt  boiler.cpp  day0.cpp  day1.cpp  day10.cpp  day11.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
2022/: workwork.sh
2023/: newday.sh  workwork.sh
2024/: day24_graph_broken.dot  day24_graph_fixed.dot  newday.sh  workwork.sh
2025/: .gitignore  newday.sh  workwork.sh
(+78 files in other folders)
